--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "mp3-duration": "^1.1.0",
     "openai": "^4.91.1"
   },
-  "description": "Eine moderne Electron-basierte Text-to-Speech-Anwendung mit Videogenerierung"
+  "description": "Eine moderne Electron-basierte Text-to-Speech-Anwendung mit Videogenerierung",
+  "devDependencies": {
+    "jest": "^30.2.0"
+  }
 }
